--- a/force-app/main/default/lwc/bikeCard/bikeCard.html
+++ b/force-app/main/default/lwc/bikeCard/bikeCard.html
@@ -2,7 +2,7 @@
     <div>
         <div>Nome: {name}</div>
         <div>Descrição: {description}</div>
-        <p> Teste Edicao no GitHub.
+        <p> Teste Edicao no GitHub.</p>
         <lightning-badge label={material}></lightning-badge>
         <lightning-badge label={category}></lightning-badge>
         
